2013.03.26 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Memory leak bug has been fixed. (Thanks to Hassan Hajji)

2013.03.01 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* README, NEWS:
	  - Documentation update.
	* Version 3.4.2 has been released.

2013.02.26 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* split.c, tests/test_split.c:
	  - Applied Viona's bug fix patch. (Thanks to Viona)
	  - Additional switching cost between AN and Num mode has been included
	    correctly.
	  - Additional switching cost between 8 and AN/Num mode has been included
	    correctly.
	  - New test case has been added.

2013.02.16 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4, master]
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.2.

2013.02.16 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Now it includes "string.h" by itself for libpng16. (Thanks to Petr)

2012.11.30 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrencode.h
	  - Doxygen documents improved.

2012.11.09 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code cleanup.

2012.11.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Memory leak bug has been fixed. (issue #24) (Thanks to chisj)
	* qrencode.c:
	  - Incorrect bit extraction bug in QRcode_encodeMaskMQR() has been fixed.
	    (issue #25) (Thanks to vlad417)
	* tests/test_qrencode.c:
	  - Added NUL checks for malloc-related bugs using failmalloc.
	  - Added a new test for issue #25. (Thanks to vlad417)

2012.10.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* NEWS:
	  - Release note has been written.
	* Version 3.4.1 has been released.

2012.10.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* configure.ac:
	  - HAVE_LIBPTHREAD was not correctly defined in config.h.in.
	* tests/test_configure.sh:
	  - New test script checking autoconf-related scripts has been added.
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.1.

2012.10.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* Version 3.4.0 has been released.
	[master]